[build-system]
requires = [
    "setuptools>=61",
    "setuptools-git-versioning",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pykd3300-tspspi"
version = "0.0.1"
description = "Korad KD3300 interface library (pylabdevs)"
requires-python = ">= 3.11"
authors = [
    {name = "Thomas Spielauer", email = "pypipackages01@tspi.at"},
]
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: 3"
    ]
dependencies = [
	"pylabdevs-tspspi >= 0.0.16",
	"pyserial >= 3.5"
]

[metadata]
license-files = "LICENSE.md"

[project.urls]
Homepage = "https://github.com/tspspi/pykd3300"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
